[gd_scene load_steps=4 format=2]

[ext_resource path="res://pieceSets/default/scenes/default.tscn" type="PackedScene" id=1]
[ext_resource path="res://tutorials/scripts/tutorialSwapping.gd" type="Script" id=2]
[ext_resource path="res://tutorials/sprites/miniGrid.png" type="Texture" id=3]

[node name="tutorialSwapping" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="piece0" parent="." instance=ExtResource( 1 )]
position = Vector2( 100, 800 )

[node name="piece1" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 600 )

[node name="piece2" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 800 )
